tests/syntax_error/bad_union_name.jou
union 1:  # Error: expected a name for the union, got an integer
    bla bla
